@@ -81,8 +81,8 @@ Summary: Open SCADA system
 Name: openscada
 Version: 0.9
 Release: rNNNN%{?dist}
-Source0: ftp://oscada.org/OpenSCADA/Work/openscada-%version.tar.lzma
-Source1: ftp://oscada.org/OpenSCADA/Work/openscada-res-%version.tar.lzma
+Source0: ftp://oscada.org/OpenSCADA/Work/openscada-%version.tar.xz
+Source1: ftp://oscada.org/OpenSCADA/Work/openscada-res-%version.tar.xz
 
 License: GPLv2
 Group: Applications/Engineering
